[package]
name = "termtree"
version = "0.1.0"
description = "Visuale tree-like data on the command-line"
documentation = "docs.rs/termtree"
homepage = "https://github.com/rust-cli/termtree"
repository = "https://github.com/rust-cli/termtree"
categories = ["command-line-interface", "visualization"]
keywords = ["cli", "tree", "dag"]
license = "MIT"
edition = "2018"
